...
                                                <action selector="runToolbarCustomizationPalette:" target="Ady-hI-5gd" id="pQI-g3-MTW"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Window" id="aUF-d1-5bR">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Window" systemMenu="window" id="Td7-aD-5lo">
                                    <items>
                                        <menuItem title="Minimize" keyEquivalent="m" id="OY7-WF-poV">
                                            <connections>
                                                <action selector="performMiniaturize:" target="Ady-hI-5gd" id="VwT-WD-YPe"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="480" height="300"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <subviews>
                            <button verticalHuggingPriority="750" springLoaded="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zEn-AA-8F5">
                                <rect key="frame" x="205" y="13" width="70" height="32"/>
                                <animations/>
                                <buttonCell key="cell" type="push" title="Start" alternateTitle="Stop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pr9-wD-13H">
                                    <behavior key="behavior" pushIn="YES" changeContents="YES" lightByContents="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <connections>
                                    <action selector="StartButtonPressed:" target="XfG-lQ-9wD" id="xkw-6z-PZB"/>
                                </connections>
...
                                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                                </textFieldCell>
                                                            </textField>
                                                            <button horizontalHuggingPriority="200" translatesAutoresizingMaskIntoConstraints="NO" id="kfF-yf-KQG">
                                                                <rect key="frame" x="193" y="7" width="249" height="18"/>
                                                                <animations/>
                                                                <buttonCell key="cell" type="check" title="this Mac" bezelStyle="regularSquare" imagePosition="left" inset="2" id="9S2-9p-gl9">
                                                                    <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                                                    <font key="font" metaFont="system"/>
                                                                </buttonCell>
                                                                <connections>
                                                                    <action selector="isServerButtonPressed:" target="XfG-lQ-9wD" id="Vq6-xZ-kCn"/>
                                                                </connections>
...
